objects/project_cloud__Invoice__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Account that this invoice is related to</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Date_Due__c</fullName>
        <inlineHelpText>The date that the invoice is due</inlineHelpText>
        <label>Date Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Date_Received__c</fullName>
        <inlineHelpText>The date that the invoice was paid</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Date_Sent__c</fullName>
        <inlineHelpText>The date that the invoice was sent to the client</inlineHelpText>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__PO_Number__c</fullName>
        <inlineHelpText>The PO number supplied by the client</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Milestone</label>
        <referenceTo>project_cloud__Project_Milestone__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Project that this invoice is related to</inlineHelpText>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Status__c</fullName>
        <inlineHelpText>The current status of the invoice</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Future Invoice</fullName>
                </value>
                <value>
                    <fullName>Ready To Send</fullName>
                </value>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Past Due</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Subtotal_Rollup__c</fullName>
        <inlineHelpText>The subtotal from all the invoice line items</inlineHelpText>
        <label>Rollup Subtotal</label>
        <summarizedField>project_cloud__Invoice_Line_Item__c.project_cloud__Subtotal__c</summarizedField>
        <summaryForeignKey>project_cloud__Invoice_Line_Item__c.project_cloud__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Tax_Rollup__c</fullName>
        <inlineHelpText>The tax from all the invoice line items</inlineHelpText>
        <label>Rollup Tax</label>
        <summarizedField>project_cloud__Invoice_Line_Item__c.project_cloud__Tax__c</summarizedField>
        <summaryForeignKey>project_cloud__Invoice_Line_Item__c.project_cloud__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Terms__c</fullName>
        <inlineHelpText>The payment terms for the invoice</inlineHelpText>
        <label>Terms (Net Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Total_Rollup__c</fullName>
        <inlineHelpText>The total from all the invoice line items</inlineHelpText>
        <label>Rollup Total</label>
        <summarizedField>project_cloud__Invoice_Line_Item__c.project_cloud__Total__c</summarizedField>
        <summaryForeignKey>project_cloud__Invoice_Line_Item__c.project_cloud__Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Invoice</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>